# syntherklaas

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: smart-lint-wrapper.sh  smart-lint.sh
.claude/lessons/: LESSONS.md
example_data/csv/: _pii_config.csv  _relations.csv  klanten.csv  orderlines.csv  orders.csv
example_data/xlsx/: example_data.xlsx
skills/engineering/syntherklaas/: SKILL.md
skills/engineering/syntherklaas/examples/: demo-schema.yaml  generate_sample.py  run-example.sh
skills/engineering/syntherklaas/scripts/: anonymizer.py  detector.py  fk_resolver.py  generate.py  nl_recognizers.py  pyproject.toml  run.sh  sampler.py  schema.py  sqlite_writer.py  syntherklaas.py  xlsx_writer.py
skills/engineering/syntherklaas/scripts/tests/: conftest.py  test_anonymizer.py  test_bsn.py  test_detector.py  test_fk_resolver.py  test_generate.py  test_providers.py  test_schema.py  test_sqlite_writer.py  test_syntherklaas_cli.py  test_writers.py  test_xlsx_writer.py
skills/syntherklaas/: SKILL.md
skills/syntherklaas/examples/: demo-schema.yaml  transcript.md
skills/syntherklaas/scripts/: fk_resolver.py  generate.py  providers.py  run.sh  schema.py  sql_writer.py  writers.py  xlsx_writer.py
skills/syntherklaas/scripts/tests/: test_generate.py  test_schema.py  test_writers.py
