[project]
name = "syntherklaas"
version = "0.1.0"
description = "Synthetic data pipeline: Excel/CSV -> PII-anonymize -> SQLite or XLSX"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "presidio-structured>=0.0.4",
    "faker>=24.0",
    "spacy>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
