[project]
name = "syntherklaas"
version = "0.2.0"
description = "Interactive synthetic data generator: schema-YAML -> Faker + numpy -> CSV/XLSX/SQLite"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "faker>=24.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
